// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField component applies correct styles to wrapper component 1`] = `
.c0 {
  margin: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  padding: 0 12px;
  border: 1px solid #6D6D6D;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #121212;
  background-color: #FAFAFA;
}

.c3:focus {
  border: 1px solid #121212;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::-moz-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

@media screen and (max-width:600px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@media screen and (max-width:600px) {
  .c3 {
    padding: 0 8px;
    font-size: 0.75rem;
  }
}

<div
  class="c0 Test"
  style="display: none;"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <input
      class="c3"
      type="text"
    />
  </div>
</div>
`;

exports[`TextField component renders correctly with action prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  padding: 0 12px;
  border: 1px solid #6D6D6D;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #121212;
  background-color: #FAFAFA;
}

.c3:focus {
  border: 1px solid #121212;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::-moz-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

@media screen and (max-width:600px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@media screen and (max-width:600px) {
  .c3 {
    padding: 0 8px;
    font-size: 0.75rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <p>
      Lorem ipsum dolor.
    </p>
  </div>
  <div
    class="c2"
  >
    <input
      class="c3"
      type="text"
    />
  </div>
</div>
`;

exports[`TextField component renders correctly with helperText prop 1`] = `
.c4 {
  padding: 0;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #6D6D6D;
  text-align: inherit;
  font-size: 0.75rem;
  line-height: 1.6666666666;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 32px;
  margin-bottom: 12px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  padding: 0 12px;
  border: 1px solid #6D6D6D;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #121212;
  background-color: #FAFAFA;
}

.c3:focus {
  border: 1px solid #121212;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::-moz-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

@media screen and (max-width:600px) {
  .c4 {
    font-size: 0.625rem;
    line-height: 1.6;
  }
}

@media screen and (max-width:600px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@media screen and (max-width:600px) {
  .c0 {
    margin-bottom: 8px;
  }
}

@media screen and (max-width:600px) {
  .c3 {
    padding: 0 8px;
    font-size: 0.75rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <input
      class="c3"
      type="text"
    />
  </div>
  <span
    class="c4"
    color="textSecondary"
  >
    Lorem ipsum dolor.
  </span>
</div>
`;

exports[`TextField component renders correctly with label prop 1`] = `
.c2 {
  padding: 0;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  color: #121212;
  text-align: inherit;
  font-size: 0.875rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  padding: 0 12px;
  border: 1px solid #6D6D6D;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #121212;
  background-color: #FAFAFA;
}

.c4:focus {
  border: 1px solid #121212;
}

.c4::-webkit-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c4::-moz-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c4:-ms-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c4::placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

@media screen and (max-width:600px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@media screen and (max-width:600px) {
  .c4 {
    padding: 0 8px;
    font-size: 0.75rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      color="textPrimary"
    >
      Lorem ipsum dolor.
    </label>
  </div>
  <div
    class="c3"
  >
    <input
      class="c4"
      type="text"
    />
  </div>
</div>
`;

exports[`TextField component renders correctly with type prop 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  padding: 0 12px;
  border: 1px solid #6D6D6D;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #121212;
  background-color: #FAFAFA;
  padding-right: 48px;
}

.c3:focus {
  border: 1px solid #121212;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::-moz-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c4 {
  position: absolute;
  right: 8px;
  top: 50%;
  -webkit-transform: translate(0,-50%);
  -ms-transform: translate(0,-50%);
  transform: translate(0,-50%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 32px;
  height: 32px;
  padding: 0;
  border: none;
  border-radius: 50%;
  background: none;
  cursor: pointer;
}

.c5 {
  width: 24px;
  height: 24px;
}

.c5 path {
  stroke: #6D6D6D;
}

@media screen and (max-width:600px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@media screen and (max-width:600px) {
  .c3 {
    padding: 0 8px;
    font-size: 0.75rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <input
      aria-label="input"
      class="c3"
      type="password"
    />
    <button
      class="c4"
    >
      <svg
        class="c5"
      />
    </button>
  </div>
</div>
`;

exports[`TextField component renders correctly without props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  padding: 0 12px;
  border: 1px solid #6D6D6D;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #121212;
  background-color: #FAFAFA;
}

.c3:focus {
  border: 1px solid #121212;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::-moz-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

@media screen and (max-width:600px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@media screen and (max-width:600px) {
  .c3 {
    padding: 0 8px;
    font-size: 0.75rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <input
      class="c3"
      type="text"
    />
  </div>
</div>
`;

exports[`TextField component retains the value correctly when controlled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  padding: 0 12px;
  border: 1px solid #6D6D6D;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #121212;
  background-color: #FAFAFA;
}

.c3:focus {
  border: 1px solid #121212;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::-moz-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

@media screen and (max-width:600px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@media screen and (max-width:600px) {
  .c3 {
    padding: 0 8px;
    font-size: 0.75rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <input
      aria-label="input"
      class="c3"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`TextField component retains the value correctly when uncontrolled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-bottom: 32px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 40px;
  padding: 0 12px;
  border: 1px solid #6D6D6D;
  font-family: 'Poppins',sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #121212;
  background-color: #FAFAFA;
}

.c3:focus {
  border: 1px solid #121212;
}

.c3::-webkit-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::-moz-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3:-ms-input-placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

.c3::placeholder {
  font-weight: 400;
  color: #6D6D6D;
}

@media screen and (max-width:600px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@media screen and (max-width:600px) {
  .c3 {
    padding: 0 8px;
    font-size: 0.75rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <input
      aria-label="input"
      class="c3"
      type="text"
    />
  </div>
</div>
`;
